--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,3 @@
-
-
-
-
 .box {
     max-width: 400px;
     width: 100%;
@@ -58,4 +54,18 @@
 
 #check {
     display: none;
+}
+
+.icon-style {
+    color: #0a472e;
+    font-size: 30px;
+    padding-right: 10px;
+}
+
+.bt-style  {
+   color: #FFF !important;
+padding-Left:20px;
+}
+.bt-style:hover {
+    color:#658F00 !important;
 }
