--- a/src/components/footeer.css
+++ b/src/components/footeer.css
@@ -16,9 +16,9 @@ h6
     /* background-image: linear-gradient(326deg, rgb(111, 2, 2) 0%, #180000 50%); */
     background-image: url(https://demo.casethemes.net/organio/wp-content/uploads/2021/07/h7-bg-footer.png);
     background-size: cover;
-    position: absolute;
+    /* position: absolute;
     bottom: 0px;
-    width: 100%;
+    width: 100%; */
 }
 
 a 
