--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,13 @@
-.Header {
-  font-family: sans-serif;
-  text-align: center;
+.headerContainer {
+  position: relative;
+  width: 100%;
+  height: 700px;
 }
 
 .bg {
   width: 100%;
-  height: 700px;
+  height: 100%;
+  position: absolute;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -15,6 +17,7 @@
   align-items: center;
 }
 .bg h1 {
+  font-family: sans-serif;
   margin-left: 5%;
   font-size: 70px;
   font-weight: 700;
@@ -24,7 +27,7 @@
 }
 
 @media (min-width: 500px) and (max-width: 950px) {
-  .bg {
+  .headerContainer {
     height: 300px;
   }
 }
