--- a/src/pages/auth/login.css
+++ b/src/pages/auth/login.css
@@ -11,20 +11,6 @@ p {
     margin-bottom: 0;
 }
 
-
-.close-btn
-{
-    background-color: #1565C0;
-    border: none;
-    color: white;
-    width: 40PX;
-    height: 40px;
-    border-radius: 50%;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
 .show {
     display: block;
       opacity: 1;
@@ -36,15 +22,21 @@ p {
       transition: opacity 200ms ease-in-out 100ms,
                   transform 500ms ease-in-out 0ms;
       border-radius: 10px;
-      z-index: 10;
-    
     }
 
-    .show.active {
-        display: none;
-        transition: top 0ms ease-in-out 0ms,
-          opacity 200ms ease-in-out 0ms,
-          transform 200ms ease-in-out 0ms;
-      
-      }
+.show.active {
+    display: none;
+    transition: top 0ms ease-in-out 0ms,
+        opacity 200ms ease-in-out 0ms,
+        transform 200ms ease-in-out 0ms;
+    
+}
+.btn-bg
+{
+    background-color: #0a472e !important;
+}
+.text-color
+{
+    color: #0a472e !important;
+}
 
