--- a/src/pages/auth/signup.css
+++ b/src/pages/auth/signup.css
@@ -36,3 +36,10 @@
   transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms,
     transform 200ms ease-in-out 0ms;
 }
+
+.btn-bg {
+  background-color: #0a472e !important;
+}
+.text-color {
+  color: #0a472e !important;
+}
