--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -41,3 +41,14 @@ a {
 .galleryItem {
   border-radius: 10%;
 }
+
+@media only screen and (max-width: 600px) {
+  .phone_container {
+    display: flex;
+    justify-content: center;
+  }
+  .social_container{
+    display: flex;
+    justify-content: center;
+  }
+}
