--- a/src/components/adCard/AdCard.css
+++ b/src/components/adCard/AdCard.css
@@ -1,29 +1,26 @@
-.adBg{
-    background-image: url("../../assets/pago.jpg");
-    width: 100%;
-    height: 400px;
-    background-size: cover;
-    background-position: center center;
-    padding-left: 100px;
+.adBg {
+  background-image: url('../../assets/pago.jpg');
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  background-position: center center;
+  padding-left: 100px;
 }
 .adBg p {
-    width: 40%;
-    font-size: 1.25rem;
+  width: 40%;
+  font-size: 1.25rem;
 }
-.adBg h2{
-    font-size: 3.5rem !important;
+.adBg h2 {
+  font-size: 3.5rem !important;
+  font-weight: bolder !important;
+}
+@media only screen and (min-width: 400px) and (max-width: 856px) {
+  .adBg p {
+    width: 40%;
+    font-size: 1rem;
+  }
+  .adBg h2 {
+    font-size: 2rem !important;
     font-weight: bolder !important;
-};
-@media only screen
-and (min-width: 400px) 
-and (max-width: 856px) {
-    .adBg p {
-        width: 40%;
-        font-size: 1rem;
-    }
-    .adBg h2{
-        font-size: 2rem !important;
-        font-weight: bolder !important;
-    };
-
+  }
 }
