--- a/src/components/navbar/MenuBar.css
+++ b/src/components/navbar/MenuBar.css
@@ -1,61 +1,3 @@
-.box {
-  max-width: 400px;
-  width: 100%;
-}
-
-.box .search-box {
-  position: relative;
-  height: 50px;
-  max-width: 50px;
-  margin: auto;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
-  transition: all 0.3s ease;
-}
-
-#check:checked ~ .search-box {
-  max-width: 380px;
-}
-
-.search-box input {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  border-radius: 25px;
-  background: #fff;
-  color: black;
-  outline: none;
-  border: none;
-  padding-left: 20px;
-  font-size: 18px;
-}
-
-.search-box .icon {
-  position: absolute;
-  right: -2px;
-  top: 0;
-  width: 50px;
-  background: #0a472e;
-  height: 100%;
-  text-align: center;
-  line-height: 50px;
-  color: #fff;
-  font-size: 20px;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
-#check:checked ~ .search-box .icon {
-  background: #0a472e;
-  color: #fff;
-  width: 60px;
-  border-radius: 0 25px 25px 0;
-}
-
-#check {
-  display: none;
-}
-
 .icon-style {
   color: #0a472e;
   font-size: 30px;
@@ -70,37 +12,30 @@
   color: #658f00 !important;
 }
 
-.count-parent 
-{
-   color: #0a472e;
-   font-Size: 40px;
-    position: relative;
-
-
+.count-parent {
+  color: #0a472e;
+  font-size: 40px;
+  position: relative;
 }
-.cart-count 
-{
+.cart-count {
   position: absolute;
   top: -17px;
   right: 3px;
   font-size: 16px;
   color: white;
-  background-color:#DFB178 ;
+  background-color: #dfb178;
   width: 25px;
   height: 25px;
   border-radius: 12.5px;
-
-
 }
 
-.wish-count 
-{
+.wish-count {
   position: absolute;
   top: -17px;
   right: -10px;
   font-size: 16px;
   color: white;
-  background-color:#DFB178 ;
+  background-color: #dfb178;
   width: 25px;
   height: 25px;
   border-radius: 12.5px;
