--- a/src/pages/details/details.css
+++ b/src/pages/details/details.css
@@ -1,10 +1,11 @@
-.ContainerModal {
+.DetailsModal {
   display: flex;
   opacity: 1;
   position: absolute;
-  width: 95%;
-  height: 95%;
+  width: 90%;
+  height: 85%;
   left: 50%;
+  background-color: #fff;
   transform: translate(-50%) scale(1);
   transition: opacity 200ms ease-in-out 100ms, transform 500ms ease-in-out 0ms;
   border-radius: 10px;
